--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 *.lcov
+.temp
+.cache
 
 # nyc test coverage
 .nyc_output
@@ -72,8 +74,6 @@ typings/
 .env
 .env.test
 
-# parcel-bundler cache (https://parceljs.org/)
-.cache
 
 # Next.js build output
 .next
@@ -102,3 +102,5 @@ dist
 
 # TernJS port file
 .tern-port
+
+.idea
