--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@iconscout/unicons": "^4.0.0",
     "@vueform/slider": "^1.0.5",
+    "randomcolor": "^0.6.2",
     "vue-ellipse-progress": "^2.0.0"
   }
 }
