--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "lint": "eslint --fix ."
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,12 @@
     "@vuepress/theme-default": "^2.0.0-beta.16",
     "@vuepress/utils": "^2.0.0-beta.15",
     "autoprefixer": "^10.2.6",
+    "eslint": "^7.31.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-vue": "^7.14.0",
     "postcss": "^8.3.0",
+    "prettier": "^2.3.2",
     "tailwindcss": "^2.1.4",
     "vuepress": "^2.0.0-beta.16"
   },
