--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   },
   "homepage": "https://github.com/setaman/vue-ellipse-progress-docs#readme",
   "devDependencies": {
-    "@vuepress/client": "^2.0.0-beta.15",
-    "@vuepress/theme-default": "^2.0.0-beta.16",
-    "@vuepress/utils": "^2.0.0-beta.15",
+    "@vuepress/bundler-webpack": "^2.0.0-beta.32",
+    "@vuepress/client": "^2.0.0-beta.32",
+    "@vuepress/theme-default": "^2.0.0-beta.32",
+    "@vuepress/utils": "^2.0.0-beta.32",
     "autoprefixer": "^10.2.6",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
@@ -31,7 +32,7 @@
     "postcss": "^8.3.0",
     "prettier": "^2.3.2",
     "tailwindcss": "^2.1.4",
-    "vuepress": "^2.0.0-beta.16"
+    "vuepress": "^2.0.0-beta.32"
   },
   "dependencies": {
     "@iconscout/unicons": "^4.0.0",
