--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@iconscout/unicons": "^4.0.0",
     "@vueform/slider": "^1.0.5",
     "randomcolor": "^0.6.2",
-    "vue-ellipse-progress": "^2.1.0",
-    "vue-ellipse-progress-dev": "git://github.com/setaman/vue-ellipse-progress.git#dev"
+    "vue-ellipse-progress": "^2.1.1"
   }
 }
