--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   },
   "homepage": "https://github.com/setaman/vue-ellipse-progress-docs#readme",
   "devDependencies": {
-    "@vuepress/bundler-webpack": "^2.0.0-beta.47",
-    "@vuepress/client": "^2.0.0-beta.47",
-    "@vuepress/theme-default": "^2.0.0-beta.47",
+    "@vuepress/bundler-webpack": "^2.0.0-beta.49",
+    "@vuepress/client": "^2.0.0-beta.49",
+    "@vuepress/plugin-search": "^2.0.0-beta.49",
+    "@vuepress/theme-default": "^2.0.0-beta.49",
     "@vuepress/utils": "^2.0.0-beta.47",
     "autoprefixer": "^10.2.6",
     "eslint": "^7.31.0",
@@ -31,13 +32,14 @@
     "eslint-plugin-vue": "^7.14.0",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
+    "sass-loader": "^13.0.2",
     "tailwindcss": "^3.0.24",
-    "vuepress": "^2.0.0-beta.47"
+    "vuepress": "^2.0.0-beta.49"
   },
   "dependencies": {
     "@iconscout/unicons": "^4.0.0",
     "@vueform/slider": "^2.0.10",
-    "@vuepress/plugin-medium-zoom": "^2.0.0-beta.47",
+    "@vuepress/plugin-medium-zoom": "^2.0.0-beta.49",
     "randomcolor": "^0.6.2",
     "vue-ellipse-progress": "^2.1.1"
   }
