--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/setaman/vue-ellipse-progress-docs.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/setaman/vue-ellipse-progress-docs/issues"
   },
@@ -24,7 +24,7 @@
     "@vuepress/client": "^2.0.0-beta.49",
     "@vuepress/plugin-search": "^2.0.0-beta.49",
     "@vuepress/theme-default": "^2.0.0-beta.49",
-    "@vuepress/utils": "^2.0.0-beta.47",
+    "@vuepress/utils": "^2.0.0-beta.49",
     "autoprefixer": "^10.2.6",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
