--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
   },
   "homepage": "https://github.com/setaman/vue-ellipse-progress-docs#readme",
   "devDependencies": {
-    "@vuepress/bundler-webpack": "^2.0.0-beta.49",
-    "@vuepress/client": "^2.0.0-beta.49",
-    "@vuepress/plugin-search": "^2.0.0-beta.49",
-    "@vuepress/theme-default": "^2.0.0-beta.49",
-    "@vuepress/utils": "^2.0.0-beta.49",
+    "@vuepress/client": "2.0.0-beta.66",
+    "@vuepress/plugin-search": "2.0.0-beta.66",
+    "@vuepress/theme-default": "2.0.0-beta.66",
+    "@vuepress/utils": "2.0.0-beta.66",
     "autoprefixer": "^10.2.6",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
@@ -34,13 +33,23 @@
     "prettier": "^2.6.2",
     "sass-loader": "^13.0.2",
     "tailwindcss": "^3.0.24",
-    "vuepress": "^2.0.0-beta.49"
+    "vuepress": "2.0.0-beta.66"
   },
   "dependencies": {
     "@iconscout/unicons": "^4.0.0",
-    "@vueform/slider": "^2.0.10",
-    "@vuepress/plugin-medium-zoom": "^2.0.0-beta.49",
+    "@vueform/slider": "^2.1.7",
+    "@vuepress/plugin-medium-zoom": "2.0.0-beta.66",
     "randomcolor": "^0.6.2",
+    "vite": "^4.4.7",
     "vue-ellipse-progress": "^2.1.1"
-  }
+  },
+  "packageRules": [
+    {
+      "packageNames": [
+        "vuepress",
+        "@vuepress/client"
+      ],
+      "allowedVersions": "!/pre.*$/"
+    }
+  ]
 }
