--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,8 @@ jobs:
         run: npm ci
 
       - name: Build VuePress site
+        env:
+          SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
         run: yarn docs:build
 
       # please check out the docs of the workflow for more details
