--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@iconscout/unicons": "^4.0.0",
     "@sentry/browser": "^7.63.0",
+    "@sentry/vite-plugin": "^2.6.2",
     "@sentry/vue": "^7.63.0",
     "@vueform/slider": "^2.1.7",
     "@vuepress/plugin-medium-zoom": "2.0.0-beta.66",
