--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
     "docs:preview": "vitepress preview"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-vue": "^9.29.0",
+    "globals": "^15.11.0",
     "postcss": "^8.4.47",
+    "prettier": "3.3.3",
     "sass": "^1.80.3",
     "tailwindcss": "^3.4.14",
+    "typescript-eslint": "^8.10.0",
     "vitepress": "^1.4.1",
     "vue": "^3.5.12"
   },
   "dependencies": {
+    "@vueform/slider": "^2.1.10",
     "vue-ellipse-progress": "^2.2.0"
   }
 }
