feat: repair progress guide

--- a/ts.config.json
+++ b/ts.config.json
@@ -25,5 +25,5 @@
     "**/*.vue",
     "**/.vitepress/**/*"
   ],
-  "exclude": ["**/node_modules/**", "**/cache/**", "guide/**"]
+  "exclude": ["**/Snippet*","**/node_modules/**", "**/cache/**", "guide/**"]
 }
