fix: repair guide

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/randomcolor": "^0.5.9",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@vueform/slider": "^2.1.10",
+    "randomcolor": "^0.6.2",
     "vue-ellipse-progress": "^2.2.0"
   }
 }
