--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^3.5.12"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.1.0",
     "@vueform/slider": "^2.1.10",
     "randomcolor": "^0.6.2",
     "vue-ellipse-progress": "^2.2.0"
