--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@faker-js/faker": "^9.1.0",
     "@vueform/slider": "^2.1.10",
+    "axios": "^1.7.7",
     "randomcolor": "^0.6.2",
     "vue-ellipse-progress": "^2.2.0"
   }
