--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "docs:preview": "vitepress preview",
+    "type-check": "vue-tsc --noEmit -p ts.config.json",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/node": "^22.10.2",
     "@types/randomcolor": "^0.5.9",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
@@ -16,9 +20,11 @@
     "prettier": "3.3.3",
     "sass": "^1.80.3",
     "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^8.10.0",
     "vitepress": "^1.5.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-tsc": "^2.2.0"
   },
   "dependencies": {
     "@faker-js/faker": "^9.1.0",
